PassThrough, Share, Tandem
- Share and Tandem use the .connect() call instead of 30 second retries
- Seems to work better or as good as the old method, still have random
drops of pairing data, probably due to OS level issues
- PassThrough doesn’t refer to nonexistent columns in the DB anymore